Fixed bump amounts. Added library to ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,5 @@ mono_crash.*.json
 # Delete these lines if you've downloaded the project to make your own game and you're using git
 .build/
 .workfiles/
+library/
 story/
